--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.2",
     "axios": "^1.6.3",
-    "immutable": "^5.0.0-beta.4",
+    "immutable": "^4.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
